--- a/index.html
+++ b/index.html
@@ -5,418 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EAS Tracker</title>
   <link rel="stylesheet" href="/styles.css"/>
+  <style>
+    /* Temporary test styles */
+    .test-style {
+      color: red;
+      font-size: 20px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <div id="app">
-    <!-- LOGIN SCREEN -->
-    <div id="login" class="auth">
-      <h1 class="brand">EAS Tracker</h1>
-      <p>Enter password to access</p>
-      <div class="row">
-        <input id="pw" type="password" class="input" placeholder="Password"/>
-        <button id="loginBtn" class="btn">Login</button>
-      </div>
-    </div>
-
-    <!-- MAIN APPLICATION -->
-    <div id="main" class="hide">
-      <nav class="nav">
-        <a data-view="home" class="active">Dashboard</a>
-        <a data-view="products">Products</a>
-        <a data-view="performance">Performance</a>
-        <a data-view="finance">Finance</a>
-        <a data-view="settings">Settings</a>
-        <a id="logoutLink" class="nav-right">Logout</a>
-      </nav>
-
-      <div class="container">
-        <!-- DASHBOARD -->
-        <section id="home">
-          <!-- Business Overview - Compact Style -->
-          <div class="section">
-            <h2>Business Overview</h2>
-            <div class="overview-grid">
-              <div class="overview-item">
-                <div class="overview-label">Active Products</div>
-                <div class="overview-value" id="kpiProducts">0</div>
-              </div>
-              <div class="overview-item">
-                <div class="overview-label">Sales Countries</div>
-                <div class="overview-value" id="kpiCountries">0</div>
-              </div>
-              <div class="overview-item">
-                <div class="overview-label">Transit Shipments</div>
-                <div class="overview-value" id="kpiTransit">0</div>
-              </div>
-              <div class="overview-item">
-                <div class="overview-label">Total Ad Spend</div>
-                <div class="overview-value" id="kpiAdSpend">0 USD</div>
-              </div>
-              <div class="overview-item">
-                <div class="overview-label">Weekly Delivered</div>
-                <div class="overview-value" id="kpiDelivered">0</div>
-              </div>
-              <div class="overview-item">
-                <div class="overview-label">Running Balance</div>
-                <div class="overview-value balance-positive" id="kpiBalance">0 USD</div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Lifetime Performance -->
-          <div class="section">
-            <h2>Lifetime Product Performance</h2>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="lpProduct" class="input sm"><option value="">All products</option></select>
-                <input id="lpStart" type="date" class="input sm"/>
-                <input id="lpEnd" type="date" class="input sm"/>
-                <button id="lpRun" class="btn sm">Run</button>
-              </div>
-            </div>
-            <div class="table-scroll">
-              <table class="table" id="lifetimeTable">
-                <thead><tr>
-                  <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-                </tr></thead>
-                <tbody id="lifetimeBody"></tbody>
-                <tfoot>
-                  <tr class="totals"><th colspan="2">Totals</th>
-                    <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
-                  </tr>
-                </tfoot>
-              </table>
-            </div>
-          </div>
-
-          <!-- Stock & Ad Spend by Country - Compact -->
-          <div class="section">
-            <h2>Stock & Ad Spend by Country</h2>
-            <div class="compact-grid">
-              <div class="card compact">
-                <table class="table compact">
-                  <thead><tr><th>Country</th><th>Stock</th><th>Ad Spend</th></tr></thead>
-                  <tbody id="stockByCountryBody"></tbody>
-                  <tfoot>
-                    <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0</th></tr>
-                  </tfoot>
-                </table>
-              </div>
-            </div>
-          </div>
-
-          <!-- Weekly Delivered -->
-          <div class="section">
-            <h2>Weekly Delivered (Mon → Sun)</h2>
-            <div class="card compact">
-              <div class="row wrap">
-                <button id="weeklySave" class="btn sm">Save</button>
-                <button id="weeklyReset" class="btn sm outline danger">Reset</button>
-              </div>
-            </div>
-            <div class="table-scroll">
-              <table id="weeklyTable" class="table compact">
-                <thead id="weeklyHead"></thead>
-                <tbody id="weeklyBody"></tbody>
-              </table>
-            </div>
-          </div>
-
-          <!-- Daily Advertising Spend -->
-          <div class="section">
-            <h2>Daily Advertising Spend</h2>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="adPlatform" class="input sm">
-                  <option value="facebook">Facebook</option>
-                  <option value="tiktok">TikTok</option>
-                  <option value="google">Google</option>
-                </select>
-                <select id="adProduct" class="input sm"></select>
-                <select id="adCountry" class="input sm"></select>
-                <input id="adAmount" type="number" class="input sm" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adSave" class="btn sm">Save/Replace</button>
-              </div>
-            </div>
-          </div>
-
-          <!-- Stock Movement -->
-          <div class="section">
-            <h2>Stock Movement</h2>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="mvFrom" class="input sm"></select>
-                <span class="muted">→</span>
-                <select id="mvTo" class="input sm"></select>
-                <select id="mvProduct" class="input sm"></select>
-                <input id="mvQty" type="number" class="input sm" placeholder="Qty" min="0"/>
-                <input id="mvShip" type="number" class="input sm" placeholder="Shipping Cost" min="0" step="0.01"/>
-                <button id="mvAdd" class="btn sm">Add Movement</button>
-              </div>
-            </div>
-          </div>
-
-          <!-- Transit Tables -->
-          <div class="section">
-            <h2>Transit (China → Kenya)</h2>
-            <div class="table-scroll">
-              <table class="table compact">
-                <thead><tr>
-                  <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-                </tr></thead>
-                <tbody id="shipCKBody"></tbody>
-              </table>
-            </div>
-          </div>
-
-          <div class="section">
-            <h2>Transit (Inter-country)</h2>
-            <div class="table-scroll">
-              <table class="table compact">
-                <thead><tr>
-                  <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-                </tr></thead>
-                <tbody id="shipICBody"></tbody>
-              </table>
-            </div>
-          </div>
-
-          <!-- Profit by Country -->
-          <div class="section">
-            <h2>Profit by Country</h2>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="pcCountry" class="input sm"><option value="">All countries</option></select>
-                <input id="pcStart" type="date" class="input sm"/>
-                <input id="pcEnd" type="date" class="input sm"/>
-                <button id="pcRun" class="btn sm">Run</button>
-              </div>
-            </div>
-            <div class="table-scroll">
-              <table class="table compact">
-                <thead><tr>
-                  <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
-                </tr></thead>
-                <tbody id="profitCountryBody"></tbody>
-                <tfoot>
-                  <tr class="totals">
-                    <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
-                  </tr>
-                </tfoot>
-              </table>
-            </div>
-          </div>
-
-          <!-- To-Do Lists -->
-          <div class="section">
-            <h2>Quick To-Do</h2>
-            <div class="card compact">
-              <div class="row">
-                <input id="todoText" class="input sm" placeholder="Task"/>
-                <button id="todoAdd" class="btn sm">Add</button>
-              </div>
-              <div id="todoList" class="todo-list compact"></div>
-            </div>
-          </div>
-
-          <div class="section">
-            <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks compact"></div>
-          </div>
-        </section>
-
-        <!-- PRODUCTS MANAGEMENT -->
-        <section id="products" class="hide">
-          <h2>Products</h2>
-          <div class="card compact">
-            <div class="h">Add Product</div>
-            <div class="row wrap">
-              <input id="pName" class="input sm" placeholder="Name"/>
-              <input id="pSku" class="input sm" placeholder="SKU"/>
-              <input id="pCost" type="number" class="input sm" placeholder="Cost from China (USD)" min="0" step="0.01"/>
-              <input id="pShip" type="number" class="input sm" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
-              <input id="pMB" type="number" class="input sm" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
-              <button id="pAdd" class="btn sm">Add</button>
-            </div>
-          </div>
-          
-          <!-- Products by Country - Compact Grid -->
-          <div class="section">
-            <h3>Products by Country</h3>
-            <div id="productsByCountry" class="products-grid">
-              <!-- Will be populated by JavaScript -->
-            </div>
-          </div>
-
-          <div class="table-scroll">
-            <table class="table compact">
-              <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
-              <tbody id="productsTable"></tbody>
-            </table>
-          </div>
-        </section>
-
-        <!-- PERFORMANCE -->
-        <section id="performance" class="hide">
-          <h2>Performance</h2>
-
-          <div class="section">
-            <h3>Top Delivered Products</h3>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="pfQuick" class="input sm">
-                  <option value="8">Last 8 days</option>
-                  <option value="28">Last 28 days</option>
-                  <option value="custom">Custom</option>
-                </select>
-                <input id="pfStart" type="date" class="input sm"/>
-                <input id="pfEnd" type="date" class="input sm"/>
-                <select id="pfCountry" class="input sm"><option value="">All countries</option></select>
-                <button id="pfRun" class="btn sm">Run</button>
-              </div>
-            </div>
-            <div class="table-scroll">
-              <table class="table compact">
-                <thead><tr>
-                  <th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
-                </tr></thead>
-                <tbody id="pfTable"></tbody>
-              </table>
-            </div>
-          </div>
-
-          <!-- ADDED BACK: Remittance Report -->
-          <div class="section">
-            <h3>Remittance Report</h3>
-            <div class="card compact">
-              <div class="row wrap">
-                <input id="rStart" type="date" class="input sm"/>
-                <input id="rEnd" type="date" class="input sm"/>
-                <select id="rCountry" class="input sm"></select>
-                <select id="rProduct" class="input sm"></select>
-                <input id="rOrders" type="number" class="input sm" placeholder="Orders" min="0"/>
-                <input id="rPieces" type="number" class="input sm" placeholder="Pieces" min="0"/>
-                <input id="rRev" type="number" class="input sm" placeholder="Revenue (USD)" min="0" step="0.01"/>
-                <input id="rAds" type="number" class="input sm" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-                <input id="rExtra" type="number" class="input sm" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
-                <button id="rAdd" class="btn sm">Add</button>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- FINANCE -->
-        <section id="finance" class="hide">
-          <h2>Finance</h2>
-
-          <!-- Big Green Balance -->
-          <div class="card big-balance">
-            <div class="h">Running Balance (All-time)</div>
-            <div id="feRunning" class="balance-large">0.00 USD</div>
-          </div>
-
-          <div class="section">
-            <h3>Categories</h3>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="fcType" class="input sm">
-                  <option value="debit">Debit</option>
-                  <option value="credit">Credit</option>
-                </select>
-                <input id="fcName" class="input sm" placeholder="Category name"/>
-                <button id="fcAdd" class="btn sm">Add Category</button>
-              </div>
-              <div class="row cats">
-                <div>
-                  <h4>Debits</h4>
-                  <div id="fcDebits" class="chips"></div>
-                </div>
-                <div>
-                  <h4>Credits</h4>
-                  <div id="fcCredits" class="chips"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="section">
-            <h3>Entries</h3>
-            <div class="card compact">
-              <div class="row wrap">
-                <input id="feDate" type="date" class="input sm"/>
-                <select id="feCat" class="input sm"></select>
-                <input id="feAmt" type="number" class="input sm" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <input id="feNote" class="input sm" placeholder="Note"/>
-                <button id="feAdd" class="btn sm">Add Entry</button>
-              </div>
-
-              <div class="row wrap" style="margin-top: 12px;">
-                <input id="fes" type="date" class="input sm"/>
-                <input id="fee" type="date" class="input sm"/>
-                <button id="feRun" class="btn sm outline">Run</button>
-                <div id="feBalance" class="badge">Period Balance: —</div>
-              </div>
-
-              <div class="table-scroll">
-                <table class="table compact">
-                  <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
-                  <tbody id="feTable"></tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- SETTINGS -->
-        <section id="settings" class="hide">
-          <h2>Settings</h2>
-
-          <div class="section">
-            <h3>Countries</h3>
-            <div class="card compact">
-              <div class="row">
-                <input id="cty" class="input sm" placeholder="Add country"/>
-                <button id="ctyAdd" class="btn sm">Add</button>
-              </div>
-              <div id="ctyList" class="chips deletable"></div>
-            </div>
-          </div>
-
-          <div class="section">
-            <h3>Edit Product Info</h3>
-            <div class="card compact">
-              <div class="row wrap">
-                <select id="epSelect" class="input sm"><option value="">Select product…</option></select>
-                <input id="epName" class="input sm" placeholder="Product name"/>
-                <input id="epSku" class="input sm" placeholder="SKU"/>
-                <input id="epCost" type="number" class="input sm" placeholder="Cost from China (USD)" step="0.01"/>
-                <input id="epShip" type="number" class="input sm" placeholder="Ship China→Kenya (USD)" step="0.01"/>
-                <input id="epMB" type="number" class="input sm" placeholder="Profit + Ads Budget (USD)" step="0.01"/>
-                <button id="epSave" class="btn sm">Save Changes</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="section">
-            <h3>Manual Save & Restore</h3>
-            <div class="card compact">
-              <div class="row">
-                <input id="snapName" class="input sm" placeholder="Name this snapshot"/>
-                <button id="snapSave" class="btn sm">Save current system data</button>
-              </div>
-              <div class="table-scroll">
-                <table class="table compact">
-                  <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
-                  <tbody id="snapList"></tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-    </div>
+  <!-- Add this test element -->
+  <div class="test-style" style="position: fixed; top: 10px; left: 10px; z-index: 9999;">
+    CSS Test - If this is red and bold, CSS is working
   </div>
-
-  <script src="/app.js" defer></script>
-</body>
-</html>
+  
+  <!-- Rest of your existing HTML -->
